[package]
name = "tick2kline"
version = "0.1.0"
edition = "2021"
authors = ["yvictor <yvictor3141@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
polars = { version = "0.32.1", features = ["lazy", "parquet", "temporal"] }
